--- a/index.haml
+++ b/index.haml
@@ -22,16 +22,12 @@
         View on GitHub
     %section.main-content
       %p
-        :markdown 
+        :markdown
           The probability and statistics cookbook is a succinct representation
           of various topics in probability theory and statistics. It provides a
           comprehensive mathematical reference reduced to its essence, rather
           than aiming for elaborate explanations.
 
-          The source code for this document is freely available on
-          [github](https://github.com/mavam/stat-cookbook) and comes with a
-          [Attribution-NonCommercial-ShareAlike 4.0 International
-          License](http://creativecommons.org/licenses/by-nc-sa/4.0/). 
       %h2
         %a#download.anchor{"aria-hidden" => "true", :href => "#download"}
           %span.octicon.octicon-link
@@ -40,11 +36,13 @@
         :markdown
           Latest release:
 
-          - Version: [0.1](https://github.com/mavam/stat-cookbook/releases/tag/0.1)
-          - Date: October 21, 2015
+          - **[Download PDF][pdf-0.1]**
+          - **Date**: October 21, 2015
+          - **Version**: [0.1][release-0.1]
 
-          Copyright &copy; [Matthias Vallentin](http://matthias.vallentin.net).
-          To reproduce, please [contact me](http://matthias.vallentin.net).
+          [pdf-0.1]: https://github.com/mavam/stat-cookbook/releases/download/0.1/stat-cookbook.pdf
+          [release-0.1]: https://github.com/mavam/stat-cookbook/releases/0.1/
+          [releases]: https://github.com/mavam/stat-cookbook/releases/
       %h2
         %a#build.anchor{"aria-hidden" => "true", :href => "#build"}
           %span.octicon.octicon-link
@@ -55,6 +53,19 @@
           first generates the distribution plots via R and then compiles the
           LaTeX source. You may have to install a few missing packages via
           CRAN.
+      %h2
+        %a#download.anchor{"aria-hidden" => "true", :href => "#license"}
+          %span.octicon.octicon-link
+        License
+      %p
+        :markdown
+          The source code for this document is freely available on
+          [github](https://github.com/mavam/stat-cookbook) and comes with a
+          [Attribution-NonCommercial-ShareAlike 4.0 International
+          License](http://creativecommons.org/licenses/by-nc-sa/4.0/).
+
+          Copyright &copy; [Matthias Vallentin](http://matthias.vallentin.net).
+          To reproduce, please [contact me](http://matthias.vallentin.net).
       %footer.site-footer
         %span.site-footer-credits
           :markdown
