--- a/index.haml
+++ b/index.haml
@@ -34,15 +34,17 @@
         Download
       %p
         :markdown
-          Latest release:
+          [Latest release][latest]:
 
-          - **[Download PDF][pdf-0.1]**
+          - **Download**: [**PDF**][pdf]
+          - **Source Code**: [ZIP][zip], [tar.gz][tar]
           - **Date**: October 21, 2015
-          - **Version**: [0.1][release-0.1]
+          - **Version**: 0.1
 
-          [pdf-0.1]: https://github.com/mavam/stat-cookbook/releases/download/0.1/stat-cookbook.pdf
-          [release-0.1]: https://github.com/mavam/stat-cookbook/releases/0.1/
-          [releases]: https://github.com/mavam/stat-cookbook/releases/
+          [latest]: https://github.com/mavam/stat-cookbook/releases/latest
+          [zip]: https://github.com/mavam/stat-cookbook/archive/0.1.zip
+          [tar]: https://github.com/mavam/stat-cookbook/archive/0.1.tar.gz
+          [pdf]: https://github.com/mavam/stat-cookbook/releases/download/latest/stat-cookbook.pdf
       %h2
         %a#build.anchor{"aria-hidden" => "true", :href => "#build"}
           %span.octicon.octicon-link
