--- a/index.haml
+++ b/index.haml
@@ -23,38 +23,42 @@
     %section.main-content
       %p
         :markdown
-          The probability and statistics cookbook is a succinct representation
-          of various topics in probability theory and statistics. It provides a
+          The probability and statistics cookbook is a succinct representation of
+          various topics in probability theory and statistics. It provides a
           comprehensive mathematical reference reduced to its essence, rather
           than aiming for elaborate explanations.
 
+          For questions, feedback, or feature requests, please [file an
+          issue](https://github.com/mavam/stat-cookbook/issues) or submit a
+          pull request directly.
       %h2
         %a#download.anchor{"aria-hidden" => "true", :href => "#download"}
           %span.octicon.octicon-link
         Download
       %p
         :markdown
-          [Latest release][latest]:
+          Latest release as of October 21, 2015:
 
-          - **Download**: [**PDF**][pdf]
-          - **Source Code**: [ZIP][zip], [tar.gz][tar]
-          - **Date**: October 21, 2015
-          - **Version**: 0.1
+            - Download: [PDF][pdf]
+            - Version: 0.1
 
-          [latest]: https://github.com/mavam/stat-cookbook/releases/latest
-          [zip]: https://github.com/mavam/stat-cookbook/archive/0.1.zip
+          See the [release notes][latest] for details. The corresponding source
+          code also exists as [tarball][tar] and [zip archive][zip].
+
+          [pdf]: https://github.com/mavam/stat-cookbook/releases/download/0.1/stat-cookbook.pdf
           [tar]: https://github.com/mavam/stat-cookbook/archive/0.1.tar.gz
-          [pdf]: https://github.com/mavam/stat-cookbook/releases/download/latest/stat-cookbook.pdf
+          [zip]: https://github.com/mavam/stat-cookbook/archive/0.1.zip
+          [latest]: https://github.com/mavam/stat-cookbook/releases/latest
       %h2
         %a#build.anchor{"aria-hidden" => "true", :href => "#build"}
           %span.octicon.octicon-link
         Build
       %p
         :markdown
-          After cloning, you can build the cookbook locally via `make`. This
-          first generates the distribution plots via R and then compiles the
-          LaTeX source. You may have to install a few missing packages via
-          CRAN.
+          After downloading the source or cloning the github repository, you
+          can build the cookbook locally via `make`. This first generates the
+          distribution plots via R and then compiles the LaTeX source. You may
+          have to install a few missing packages via CRAN.
       %h2
         %a#download.anchor{"aria-hidden" => "true", :href => "#license"}
           %span.octicon.octicon-link
